package thuchanh.CA2_Button;

public interface ButtonListener {
    void onClick();
}
