@startuml
'https://plantuml.com/class-diagram

interface ButtonListener{
    + void onClick()
}

class Button{
    + void addListener(ButtonListener listener)
    + void removeListener()
    + void onClick()
}

class Activity{
    int count=0
    void onClick()
}

Activity ..|> ButtonListener
Button--> ButtonListener: buttonListener

@enduml